example/16-task-manager-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-manager-deployment
  labels:
    app: task-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-manager
  template:
    metadata:
      labels:
        app: task-manager
    spec:
      containers:
        - name: task-manager
          image: volnenko/task-manager-spring-boot-primefaces
          ports:
            - containerPort: 8080
