example/07-tomcat-service-internal.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: tomcat-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: tomcat
