example/time-server-simple.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: time-server-deployment
spec:
  selector:
    matchLabels:
      app: time-server
  replicas: 3
  template:
    metadata:
      labels:
        app: time-server
    spec:
      containers:
      - name: time-server
        image: volnenko/time-server:latest
        ports:
        - containerPort: 8080
          protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: time-server-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: time-server
  externalIPs:
    - 65.21.108.81
