example/05-time-server-ingress-virtual-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: time-server-virtual-hosts
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:   
  - host: time.master.kubernetes.volnenko.ru
    http:
      paths:
      - path: /    
        pathType: Prefix    
        backend:
          service:
            name: time-server-service
            port:
              number: 80
