example/160-task-manager-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-manager-deployment
  labels:
    app: task-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-manager
  template:
    metadata:
      labels:
        app: task-manager
    spec:
      nodeName: worker2.k8s.volnenko
      containers:
        - name: task-manager
          image: volnenko/task-manager-pf-crud
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: task-manager-service
spec:
  type: LoadBalancer
  selector:
    app: task-manager
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-manager-ingress-virtual-hosts
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:   
  - host: tm.k8s.volnenko
    http:
      paths:
      - path: /    
        pathType: Prefix    
        backend:
          service:
            name: task-manager-service
            port:
              number: 80
