example/time-server-ingress-balancer.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: time-server-ingress-balancer
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: time.volnenko.ru
    http:
      paths:
      - path: /        
        backend:
          service:
            name: time-server-service
            port:
              number: 80
