example/time-server-ingress-service.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.global-static-ip-name: "web-static-ip"
spec:
  defaultBackend:
    service:
      name: time-server-service
      port:
        number: 80
---
kind: Service
apiVersion: v1
metadata:
  name: test-ingress
spec:
  type: LoadBalancer
  ports:
    - port: 80
  selector:
    app: time-server-service
  externalIPs:
    - 65.21.108.81
